Revised download logic and ui update logic; Moved most sharedobjects to BuildBoxMainActivity; Renamed some classes; Added permissions to AndroidManifest.xml; Changed usage of json.org objects to com.google.gson objects; Changed Download item layout; Changed build.prop names from kitchen to buildbox; Changed service to communicate with binding instead of bundle in on start command; Added updatereceiver for update notifications; Added temporarly onlongclick listener to remove items in downloads view; Fixed backbutton behaviour with childfragmentmanager; Changed communicator to use httpurlconnection instead of httpclient; Changed most communicator methods from static to instance methods; Revised downloadmap; revised downloadpackage; Added constructors and for downloadmap, downloadresponse and downloadpackage to serialize/deserialize them from/to json (to save state when service is finished, but app isn't in foreground; Changed progress type of downloadasync communicator from int to downloadresponse; changed download workers to run concurent; Some stuff i forgot (sry, simply check the commit itself, have been to much changes :));